fix: disallow horizontal scrolling caused by 'Feedback' button
On mobile devices, the feedback button on the right edge is positioned
such that it causes scrolling. This might seem like a hack-y way to do
it but it works.

--- a/site/src/styl/index.styl
+++ b/site/src/styl/index.styl
@@ -3,6 +3,7 @@
 .container
     min-height 100vh
     width 100vw
+    overflow-x hidden
 
 section.main
     width 90%
